@@ -1,3 +1,11 @@
-.build
-Dist-Zilla-Role-PluginLoader-*
-tmp/
+/.build
+/Dist-Zilla-Role-PluginLoader-*
+/META.json
+/META.yml
+/MYMETA.json
+/MYMETA.yml
+/Makefile
+/Makefile.old
+/blib/
+/pm_to_blib
+/tmp/
