@@ -1,4 +1,5 @@
 ; Generated by Dist::Zilla::Plugin::Author::KENTNL::DistINI version 2.020000 at Thu Aug 28 05:44:59 2014
+; vim: syntax=dosini
 name             = Dist-Zilla-Role-PluginLoader
 author           = Kent Fredric <kentnl@cpan.org>
 license          = Perl_5
