@@ -1,10 +1,18 @@
 This file contains changes in OPTIONAL dependencies for standard CPAN phases (configure/build/runtime/test)
 
 0.001003
+ [Added / runtime recommends]
+ - Moose 2.000
+
+ [Changed / configure recommends]
+ - ExtUtils::MakeMaker 6.98 → 7.00
+
+ [Changed / test recommends]
+ - ExtUtils::MakeMaker 6.98 → 7.00
+ - Test::More 1.001006 → 0.99
 
 0.001002 2014-10-17T08:34:14Z
  [Changed / test recommends]
  - Test::More 1.001003 → 1.001006
 
 0.001001 2014-08-29T09:59:08Z
-
