@@ -1,6 +1,14 @@
 Release history for Dist-Zilla-Role-PluginLoader
 
 {{$NEXT}}
+ - Bugfix: Avoid test failures with -Ddefault_inc_excludes_dot
+
+ [Dependencies::Stats]
+ - Dependencies changed since 0.001002, see misc/*.deps* for details
+ - configure: +1 (recommends: ↑1)
+ - develop: +11 ↑3 -3 (recommends: +1, suggests: ↑2)
+ - runtime: (recommends: +1)
+ - test: +1 ↓1 (recommends: ↑1 ↓1)
 
 0.001002 2014-10-17T08:34:14Z 9f73b47
  [Bugfix]
@@ -25,4 +33,3 @@ Release history for Dist-Zilla-Role-PluginLoader
 
 0.001000 2014-08-28T01:01:08Z
  - First version.
-
